@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd October 10, 2014
+.Dd June 30, 2015
 .Dt KYUAFILE 5
 .Os
 .Sh NAME
@@ -144,6 +144,15 @@ If empty or not defined, the test is allowed to run on any machine
 platform.
 .It Va description
 Textual description of the test.
+.It Va is_exclusive
+If true, indicates that this test program cannot be executed along any other
+programs at the same time.
+Test programs that affect global system state, such as those that modify the
+value of a
+.Xr sysctl 8
+setting, must set themselves as exclusive to prevent failures due to race
+conditions.
+Defaults to false.
 .It Va required_configs
 Whitespace-separated list of configuration variables that the test requires
 to be defined before it can run.
